@@ -33,7 +33,6 @@ import java.util.UUID;
 @Service
 public class QueryServiceImpl implements QueryService {
 
-    private final ANFHelper anfRepo;
     private final CsvService csvService;
     private final MeasureOperationService measureOperationService;
     private final TextOperationService textOperationService;
@@ -49,7 +48,6 @@ public class QueryServiceImpl implements QueryService {
      * @param csvService the CsvService object used for csv operations
      */
     public QueryServiceImpl(ANFHelper anfRepo, CsvService csvService, MeasureOperationService measureOperationService, TextOperationService textOperationService) {
-        this.anfRepo = anfRepo;
         this.csvService = csvService;
         this.measureOperationService = measureOperationService;
         this.textOperationService = textOperationService;
@@ -132,7 +130,7 @@ public class QueryServiceImpl implements QueryService {
         processQueries(queries);
 
         if (queries.size() == 1) {
-            return prepareResult(queries.get(0));
+            return prepareResult(queries.getFirst());
         }
 
         int index = 1;
@@ -140,7 +138,7 @@ public class QueryServiceImpl implements QueryService {
             processByJoinOperation(queries, index);
             index += 2;
         }
-        return prepareResult(queries.get(queries.size() - 1));
+        return prepareResult(queries.getLast());
     }
 
     /**
